// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicTextInput component > should render the input correctly 1`] = `
<DocumentFragment>
  <div
    class="_container_aea932"
  >
    <div
      class="_wrapper_aea932"
    >
      <label
        class="cl-label _label_aea932"
        for="test-input-id"
      >
        <span
          class="cl-label__text"
        >
          Test Input:
        </span>
      </label>
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        class="_input_aea932"
        id="test-input-id"
        name="testInput"
        placeholder="Enter text here..."
        type="text"
        value=""
      />
    </div>
    <span
      class="cl-error-message _error_aea932"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;

exports[`ChopLogicTextInput component > should render the required input correctly 1`] = `
<DocumentFragment>
  <div
    class="_container_aea932"
  >
    <div
      class="_wrapper_aea932"
    >
      <label
        class="cl-label _label_aea932"
        for="test-input-id"
      >
        <span
          class="cl-label__text"
        >
          Test Input:
        </span>
        <abbr
          class="cl-label__required"
          title="required"
        >
          *
        </abbr>
      </label>
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        class="_input_aea932"
        id="test-input-id"
        name="testInput"
        placeholder="Enter text here..."
        required=""
        type="text"
        value=""
      />
    </div>
    <span
      class="cl-error-message _error_aea932"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;
